3. Services/12-helloervice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloservice
  namespace: my-application
spec:
  ports:
  - name: web
    port: 8080
    targetPort: 8080
  selector:
    app: helloservice
