3. Services/23-order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orderservice
  namespace: my-application
spec:
  ports:
  - name: web
    port: 5000
    targetPort: 5000
  selector:
    app: orderservice
