3. Services/17-whoami-traefik-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingressroute
  namespace: my-application
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`whoami.mydns.com`)
    kind: Rule
    services:
    - name: whoami
      port: 80
  tls: {}
